[package]
name = "stdweb-getrandom"
version = "0.1.0"
edition = "2018"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
description = "Custom shim for using getrandom with stdweb"
documentation = "https://docs.rs/stdweb-getrandom"
repository = "https://github.com/rust-random/getrandom"
categories = ["wasm"]

[dependencies]
getrandom = { path = "../..", version = "0.2", features = ["custom"] }
stdweb = "0.4.18"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
