[package]
name = "wasm-bindgen-getrandom"
version = "0.1.0"
edition = "2018"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
description = "Custom shim for using getrandom with wasm-bindgen"
documentation = "https://docs.rs/wasm-bindgen-getrandom"
repository = "https://github.com/rust-random/getrandom"
categories = ["wasm"]

[dependencies]
getrandom = { path = "../..", version = "0.2", features = ["custom"] }
wasm-bindgen = "0.2.46"

[dev-dependencies]
wasm-bindgen-test = "0.2.46"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
