[package]
name = "getrandom_wasm_bindgen_test"
description = "Minimal test crate for getrandom using wasm-bindgen"
version = "0.1.0"
authors = ["The Rand Project Developers"]
publish = false
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { path = "../..", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"
